--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,9 @@
 body{
-	background: blue;
-	color: yellow;
+	background: white;
+	color: black;
 	padding:1%;
 	text-align: center;
+}
+.serif {
+  font-family: "Georgia", Georgia, serif;
 }
